# gTRFinder

./: .gitignore  CMakeLists.txt  README.md  config.h.in
include/: DBGindex.h  basic.h  evaluate.h  generateSeq.h  hash.h  kmer_TRs_interval.h  match.h  parallel.h  plot_data.h  test.h
src/: DBGindex.cpp  basic.cpp  evaluate.cpp  generateSeq.cpp  hash.cpp  kmer_TRs_interval.cpp  main.cpp  match.cpp  parallel.cpp  plot_data.cpp  plot_data.py  test.cpp
test_data/fasta/: A1.fasta  A2.fasta  B1.fasta  B2.fasta  C1.fasta  C2.fasta  D1.fasta  D2.fasta  E1.fasta  E2.fasta  F2.fasta
test_data/info/: A1.info  A2.info  A3.info  A4.info  B1.info  B2.info  B3.info  B4.info  C1.info  C2.info  C3.info  C4.info  D1.info  D2.info  D3.info  D4.info  E1.info  E2.info  E3.info  E4.info  E5.info  F1.info  F2.info
